--- a/_posts/2023-12-30-基于端云协同的疲劳状态快速检测系统.md
+++ b/_posts/2023-12-30-基于端云协同的疲劳状态快速检测系统.md
@@ -1,6 +1,8 @@
 ---
 title: 基于端云协同的疲劳状态快速检测系统
 date: 2023-12-30 21:56:00 +/-基于端云协同的疲劳状态快速检测系统
-categories: [TOP_CATEGORIE, SUB_CATEGORIE]
+categories: [项目, 事件相机]
 tags: [TAG]
 ---
+
+## 基于端云协同的疲劳状态实时检测系统
