--- a/_posts/2023-12-30-基于端云协同的疲劳状态快速检测系统.md
+++ b/_posts/2023-12-30-基于端云协同的疲劳状态快速检测系统.md
@@ -2,7 +2,7 @@
 title: 基于端云协同的疲劳状态快速检测系统
 date: 2023-12-30 21:56:00 +/-基于端云协同的疲劳状态快速检测系统
 categories: [项目, 事件相机]
-tags: [事件相机], [端云协同]
+tags: [事件相机, 疲劳检测, 工程项目]
 ---
 
 ## 基于端云协同的疲劳状态实时检测系统
